# ImageEditor

./: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  README.md  UNIT_TESTS_INSTRUCTIONS.txt
CMAKE/: CMakeLists.txt
include/: buffer.hpp  display.hpp  helper_functions.hpp  image.hpp  image_processing.hpp  logger.hpp  logs_buffer.hpp  logs_display.hpp  logs_image.hpp  logs_image_processing.hpp  print_memory.hpp  process_user_commands.hpp  unit_tests.hpp
other/: TMP_testing_build_instructions.txt
src/: CMakeLists.txt  IP_change_brightness.cpp  IP_extract_channel.cpp  IP_histogram.cpp  IP_monochrome.cpp  IP_quantize.cpp  IP_rotate.cpp  buffer.cpp  display.cpp  helper_functions.cpp  image.cpp  main.cpp  print_memory.cpp  process_user_commands.cpp  test_IP_change_brightness.cpp  test_IP_extract_channel.cpp  test_IP_monochrome.cpp  test_IP_quantize.cpp  test_IP_rotate.cpp  test_rotation.cpp  unit_tests.cpp
tests/: CMakeLists.txt  test_IP_extract_channel.cpp  test_IP_monochrome.cpp  test_IP_rotate.cpp
